fix: adjust input field width for better alignment in login form

--- a/trabalho/login/estilo/media-query.css
+++ b/trabalho/login/estilo/media-query.css
@@ -25,7 +25,7 @@
     }
 
     div.campo > input {
-        width: 84%;
+        width: 80%;
     }
     
 }
